SET("OpenCV_DIR" "~/opencv-3.1.0/build")
SET(CMAKE_CXX_STANDARD 11)

cmake_minimum_required(VERSION 3.0)
project(HW3)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(h1 h1.cpp)
add_executable(h2 h2.cpp)
add_executable(h3 h3.cpp)
target_link_libraries(h1 ${OpenCV_LIBS})
target_link_libraries(h2 ${OpenCV_LIBS})
target_link_libraries(h3 ${OpenCV_LIBS})
